fix: adjust spacing sizes for consistency

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,18 +35,20 @@ html {
 
 html,
 body {
-    min-height: 100%;
+    min-height: 100vh;
     overflow: hidden;
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
     color: var(--text-color);
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
-    background: white;
     display: flex;
     align-items: center;
+    background: white;
 }
 
 img {
@@ -56,7 +58,7 @@ img {
 
 section {
     width: 100%;
-    padding: 20px 100px;
+    padding: 1.125rem 6rem;
     scroll-snap-align: start;
 }
 
@@ -190,7 +192,7 @@ p {
                 width: 1px;
                 height: 250px;
                 transform: rotate(36deg);
-                background: black;
+                background: var(--text-color);
                 bottom: -88px;
                 left: 245px;
                 z-index: 1;
@@ -216,7 +218,7 @@ p {
                 left: 12px;
                 width: 100%;
                 height: 100%;
-                border: 1px dashed black;
+                border: 1px dashed var(--text-color);
                 border-radius: 30px 0 30px 0;
                 z-index: 0;
             }
